--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon server.js"
-    
   },
   "keywords": [],
   "author": "",
@@ -13,7 +12,8 @@
   "dependencies": {
     "colors": "^1.4.0",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "install": "^0.13.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
