--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "colors": "^1.4.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "install": "^0.13.0"
+    "init": "^0.1.2",
+    "install": "^0.13.0",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.25.3",
+    "sequelize-cli": "^6.5.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
